--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <link href="http://fonts.googleapis.com/css?family=Courier" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <h1>80s Rock and Roll</h1>
