finished JavaScript Basics tutorial

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
             <li>Your Love</li>
             <li>Back in Black</li>
         </ul>
+        <a href="https://recordingarts.com/80s-music-why-the-styles-and-sounds-keep-making-a-comeback/">
+          How the 80s Changed the World of Music Forever
+        </a>     
     </p>
-    <a href="https://recordingarts.com/80s-music-why-the-styles-and-sounds-keep-making-a-comeback/">
-        How the 80s Changed the World of Music Forever
-    </a>      
+    <button>Change user</button> 
+    <script src="scripts/main.js"></script>
   </body>
 </html>
