changed toronto picture to me

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img class="toronto" src="images/torontocastle.jpg" alt="This is a photo of Casa Loma, a famous stone mansion built to resemble a castle, with a water fountain in the front"/>
       </div>
       <div class="col">
-        <img class="toronto" src="images/torontogardenpark.jpg" alt="This is a photo of a stream running through the trees next to the walkway in the Toronto Botanical Gardens"/>
+        <img class="toronto" src="images/me.jpeg" alt="This is a photo of a stream running through the trees next to the walkway in the Toronto Botanical Gardens"/>
       </div>
     </div>
     <script src="scripts/main.js"></script>
