changed .jpg to .JPG

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <p id="cool-fact-text" style="display: none">I speak 7 languages to varying degrees!</p>
     <div class="row">
       <div class="col">
-        <img class="toronto" src="images/torontocastle.jpg" alt="This is a photo of Casa Loma, a famous stone mansion built to resemble a castle, with a water fountain in the front"/>
+        <img class="toronto" src="images/torontocastle.JPG" alt="This is a photo of Casa Loma, a famous stone mansion built to resemble a castle, with a water fountain in the front"/>
       </div>
       <div class="col">
-        <img class="toronto" src="images/me.jpeg" alt="This is a photo of a stream running through the trees next to the walkway in the Toronto Botanical Gardens"/>
+        <img class="toronto" src="images/torontogardenpark.JPG" alt="This is a photo of a stream running through the trees next to the walkway in the Toronto Botanical Gardens"/>
       </div>
     </div>
     <script src="scripts/main.js"></script>
